fix question overflow

--- a/frontend/styles/main.css
+++ b/frontend/styles/main.css
@@ -67,9 +67,8 @@ body {
 
 .leetcode-list {
   overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  scrollbar-color: #7D5260 #1d1b20;
+  margin: 0px 20px;
 }
 
 .list-item {
@@ -80,7 +79,7 @@ body {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  background-color: #f9f9f9;
+  background-color: #D9D9D9;
 }
 
 .leetcode-list.completed {
